--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,15 +13,33 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!-- Portrait Orientation Only -->
         <activity
             android:name="com.syedjafri.motionsensortests.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name="com.syedjafri.motionsensortests.AdminLockReceiver"
+            android:enabled="true"
+            android:exported="true" 
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
+            </intent-filter>
+            <!-- attach device_admin XML resource -->
+            <meta-data
+                android:name="android.app.device_admin"
+                android:resource="@xml/device_admin"/>
+        </receiver>
+        
     </application>
 
 </manifest>
